- added possibility to delete all logged search terms (Thorsten)
- added experimental support for bcrypt (Thorsten)
- added support for MySQL sockets
- added possibility to enable/disable gzip compression (Thorsten)
- added possibility for inactive, hidden categories (Thorsten)
- added tag management frontend (Thorsten)
- added full support for SQLite3 (Peter Kehl)
- updated bundled Symfony ClassLoader to version 2.5.2 (Thorsten)
- updated bundled jQuery to version 1.11.1 (Thorsten)
- updated bundled Bootstrap to version 3.2.0 (Thorsten)
- updated bundled Font Awesome to version 4.0.3 (Thorsten)
- updated bundled Modernizr to version 2.7.2 (Thorsten)
- updated bundled TinyMCE to version 4.0.28 (Thorsten)
- dropped support for ext/mysql (Thorsten)
- dropped support for SQLite2 (Thorsten)

Version 2.8.13 - 2014-
- updated Chinese (Traditional) translation (Barlos Lee)

Version 2.8.12 - 2014-08-02
- updated Hebrew translation
- updated to Twitter OAuth v1.1 (Thorsten)
- updated bundled Symfony ClassLoader to version 2.5.1 (Thorsten)
- fixed RSS/Atom feed compatibility (Thorsten)

Version 2.8.11 - 2014-06-28
- updated German translation (Thorsten)
- updated Romanian translation
- updated Spanish translation
- fixed some minor bugs (Thorsten)

Version 2.8.10 - 2014-05-30
- dropped support for Internet Explorer 7 and 8 (Thorsten)
- updated Brazilian Portuguese translation (Joao Tafarelo)
- updated bundled TinyMCE to version 3.5.11 (Thorsten)
- updated bundled TCPDF library to version 6.0.078 (Thorsten)
- fixed some minor bugs (Thorsten)

Version 2.8.9 - 2014-04-28
- updated Thai translation
- fixed some minor bugs (Thorsten)

Version 2.8.8 - 2014-03-18
- improved API security (Thorsten)
- fixed search with Hebrew characters (Thorsten)
- fixed PDF export with Czech and Slovak characters (Thorsten)
- fixed a lot of bugs (Thorsten)

Version 2.8.7 - 2014-02-05
- fixed PHP 5.4 related issue introduced in 2.8.6 (Thorsten)

Version 2.8.6 - 2014-02-04