@@ -12,7 +12,7 @@
     <meta name="author" content="{metaPublisher}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="application-name" content="phpMyFAQ {phpmyfaqversion}">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="{metaRobots}">
     <meta name="revisit-after" content="7 days">
 
     <!-- Share on Facebook -->
